# ShiningArmor

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
ShiningArmor/: sqliteDB.py  twitter.py  whatsapp.py
tests/: clean.sh  error.1.txt  run.sh  run_tweet.sh  sql_stmts.json  test_tweet.py  test_whatsapp.py
