[build-system]
requires = ["setuptools >= 40.6.0", "wheel", "certifi==2021.5.30", "charset-normalizer==2.0.4", "EasyProcess==0.3", "idna==3.2", "oauthlib==3.1.1", "PySocks==1.7.1", "PyVirtualDisplay==2.2", "requests==2.26.0", "requests-oauthlib==1.3.0", "selenium==3.141.0", "six==1.16.0", "tweepy==3.10.0", "urllib3==1.26.6"]
build-backend = "setuptools.build_meta"
